Changed index db location.

--- a/default/indexes.conf
+++ b/default/indexes.conf
@@ -1,7 +1,7 @@
 [homeassistant]
-coldPath = /hadb/colddb
+coldPath = /data/hadb/colddb
 enableDataIntegrityControl = 0
 enableTsidxReduction = 0
-homePath = /hadb/db
+homePath = /data/hadb/db
 maxTotalDataSizeMB = 512000
-thawedPath = /hadb/thaweddb
+thawedPath = /data/hadb/thaweddb
